--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@ __pycache__/
 
 
 # IDE
-.idea/
+.idea
 
 # Local DB
 db.sqlite3
-polls/migrations/
+polls/migrations
 
 # Local Setting
 django_hello_world/local_setting.py
